Apply the JPMS workaround for Kotlin smoke tests <1.5